--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .input {
@@ -10,10 +11,10 @@
   outline: none;
   border-radius: 2.5px;
   width: 100%;
-  height: 1.5rem;
-  font-size: 1rem;
+  height: 2rem;
+  font-size: 1.5rem;
   background-color: #efefef;
-  color: white;
+  color: #000;
   border-bottom: 1px solid #fff;
 }
 
@@ -26,10 +27,10 @@ textarea {
 }
 
 .top {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .bottom {
-  font-size: 0.65rem;
+  font-size: 0.8rem;
   font-style: italic;
 }
