--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,5 @@
 .navbar {
+  background-color:#362312;
   position: fixed;
   top: 0;
   left: 0;
@@ -6,8 +7,18 @@
   height: 60px;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: 0 80px;
+}
+
+.navbar-button {
+  border: none;
+  color:#ffffff;
+}
+
+.navbar-logo {
+  font-family: 'Sarina';
+  font-size: 1.5rem;
 }
 
 .btn-signin {
