--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -9,10 +9,16 @@
     transform 550ms cubic-bezier(0.23, 1, 0.32, 1) 250ms,
     opacity 750ms cubic-bezier(0.23, 1, 0.32, 1);
   color: #5b5b5b;
+  cursor: pointer;
+}
+
+.task-selected {
+  background-color: #997950;
+  color: #fff;
 }
 
 .task-body {
-  background-color: white;
+  border: 2px solid #997950;
   height: 70px;
   border-radius: 10px;
   position: relative;
