--- a/src/components/TasksModal/TasksModal.css
+++ b/src/components/TasksModal/TasksModal.css
@@ -1,5 +1,13 @@
+.overlay {
+  position: fixed;
+  height: 100vh;
+  background-color: rgba(26, 26, 26, 0.5);
+  width: 100%;
+  z-index: 100;
+}
+
 .modal {
-  color: #5b5b5b;
+  color: #362312;
   width: 25%;
   border-radius: 5px;
   background-color: #fff;
@@ -44,7 +52,6 @@
   margin-bottom: 10px;
   padding: 0;
   font-weight: 300;
-  color: #5b5b5b;
   border: none;
   opacity: 1;
   outline: none;
@@ -56,18 +63,23 @@
   margin: 2px;
   border: none;
   outline: none;
-  border-radius: 2.5px;
-  height: 1.5rem;
+  border-radius: 10px;
+  height: 2rem;
   font-size: 1rem;
-  background-color: #efefef;
+  padding: 0 5px;
+  border: 2px solid #997950;
+  /* background-color: #efefef; */
   color: white;
-  border-bottom: 1px solid #fff;
+  /* border-bottom: 1px solid #fff; */
   margin-bottom: 15px;
 }
 
 .select-pomos {
   width: 100%;
-  height: 1.5rem;
+  height: 2rem;
+  font-size: 1rem;
+  border: 2px solid #997950;
+  border-radius: 10px;
 }
 
 label {
@@ -89,7 +101,8 @@ label {
   padding-right: 12px;
   cursor: pointer;
   border-radius: 8px;
-  background-color: #5b5b5b;
+  background-color: #362312;
+  border: 2px solid #362312;
   color: white;
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
