--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color:#362312;
+  background-color: #362312;
   position: fixed;
   top: 0;
   left: 0;
@@ -13,7 +13,17 @@
 
 .navbar-button {
   border: none;
-  color:#ffffff;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin: 0 10px;
+  border-radius: 4px;
+  font-size: 16px;
+  padding: 2px 12px;
+  background: none;
+  font-weight: 300;
 }
 
 .navbar-logo {
@@ -37,4 +47,5 @@
 .navbar-items {
   display: flex;
   gap: 12px;
+  list-style-type: none;
 }
